updates colors and modes. Fixes overflow

--- a/styles/colorsandmodes.css
+++ b/styles/colorsandmodes.css
@@ -47,3 +47,35 @@ body.tanjiro{
 body.tanjiro.dark-mode{
     --accent1:87, 22, 6;
 }
+
+body.zenitsu{
+    --accent1:248, 244, 6;
+}
+
+body.zenitsu.dark-mode{
+    --accent1:77, 75, 4;
+}
+
+body.inosuke{
+    --accent1: 10, 10, 151;
+}
+
+body.inosuke.dark-mode{
+    --accent1: 2, 2, 77;
+}
+
+body.kanao{
+    --accent1: 155, 12, 160;
+}
+
+body.kanao.dark-mode{
+    --accent1: 91, 7, 94;
+}
+
+body.kyojuro{
+    --accent1: 255, 102, 0;
+}
+
+body.kyojuro.dark-mode{
+    --accent1: 78, 35, 7;
+}
