--- a/styles/general.css
+++ b/styles/general.css
@@ -10,6 +10,7 @@
 body, html{
     width: 100vw;
     height: 100dvh;
+    overflow: hidden;
 }
 
 body{
